--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    compile fileTree(dir: 'libs', includes: ['*.jar'])
+    compile files('libs/twitter4j-core-4.0.4.jar')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.0.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -45,7 +48,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.+'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
-        transitive = true;
+        transitive = true
     }
 
 }
+
+apply plugin: 'com.google.gms.google-services'
