--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.buggyarts.instafeed"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
     compile fileTree(dir: 'libs', includes: ['*.jar'])
     compile files('libs/twitter4j-core-4.0.4.jar')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
