--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.buggyarts.instafeed"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.0.5"
+        versionCode 4
+        versionName "1.0.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,26 +34,34 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-database:11.0.4'
-    implementation 'com.google.firebase:firebase-messaging:11.0.4'
+
     compile fileTree(dir: 'libs', includes: ['*.jar'])
     compile files('libs/twitter4j-core-4.0.4.jar')
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:26.0.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.github.rubensousa:gravitysnaphelper:1.5'
+
     testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     compile 'com.android.support:design:26.0.+'
     compile 'com.android.support:cardview-v7:26.0.+'
     compile 'com.android.support:recyclerview-v7:26.0.+'
     compile 'com.github.bumptech.glide:glide:3.8.0'
+    // bottom navigation lib
+    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    // google play services
+    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    // crash analytics
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
-    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'com.github.rubensousa:gravitysnaphelper:1.5'
-
 }
 
 apply plugin: 'com.google.gms.google-services'
