--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,16 +50,18 @@ dependencies {
 //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.android.support:design:26.0.+'
-    compile 'com.android.support:cardview-v7:26.0.+'
-    compile 'com.android.support:recyclerview-v7:26.0.+'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.android.support:design:26.0.+'
+    implementation 'com.android.support:cardview-v7:26.0.+'
+    implementation 'com.android.support:recyclerview-v7:26.0.+'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    // overscroll library
+    implementation 'me.everything:overscroll-decor-android:1.0.4'
     // bottom navigation lib
-    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     // google play services
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    implementation 'com.google.android.gms:play-services-ads:11.0.4'
     // crash analytics
-    compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
 }
