--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.buggyarts.instafeedplus.MainActivity"
-                tools:replace="android:value"/>
+                tools:replace="android:value" />
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -59,25 +59,23 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"
                 android:value=".SearchActivity"
-                tools:replace="android:value"/>
+                tools:replace="android:value" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.buggyarts.instafeedplus.MainActivity"
-                tools:replace="android:value"/>
+                tools:replace="android:value" />
         </activity>
 
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="a72fd413850382879bcd244179c7b204bf5badde"
             tools:replace="android:value" />
-
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="false" />
-
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/ad_mob_dummy_app_id"/>
+            android:value="@string/ad_mob_app_id" />
 
         <activity
             android:name=".IntroActivity"
@@ -94,7 +92,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.buggyarts.instafeedplus.MainActivity"
-                tools:replace="android:value"/>
+                tools:replace="android:value" />
         </activity>
         <activity
             android:name=".HomeTabActivity"
@@ -118,16 +116,18 @@
             android:name=".activity.VideoPayerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Transparent" />
-        <activity android:name=".activity.NewsSpecialActivity"
+        <activity
+            android:name=".activity.NewsSpecialActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoToolBar">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
         <activity
             android:name=".activity.ArticleListActivity"
             android:screenOrientation="portrait"
@@ -136,12 +136,11 @@
         <meta-data
             android:name="com.buggyarts.instafeedplus.customClasses.MyGlideModule"
             android:value="MyGlideModule"
-            tools:replace="android:value"/>
-
+            tools:replace="android:value" />
         <meta-data
-            tools:node="replace"
             android:name="android.support.VERSION"
-            android:value="27.1.1" />
+            android:value="27.1.1"
+            tools:node="replace" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
@@ -158,15 +157,14 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/notification_icon" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/themeColorSecondaryDark" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
+        <activity android:name=".admin.CreateArticleActivity"></activity>
     </application>
 
 </manifest>
